Work on adding comment endpoints and refining database schema
