# backend/src/types.ts
@@ -1,0 +1,20 @@
+export type UserInfo = {
+    name: string;
+};
+
+export type User = {
+    user_id: string;
+    name: string;
+};
+
+export type CommentInfo = {
+    user_id: string;
+    comment: string;
+    vid_id: string;
+};
+
+export type Comment = {
+    comment_id: string;
+    user_id: string;
+    comment: string;
+};
